src/test/ui/impl-trait/issues/issue-78722.stderr
warning: the feature `impl_trait_in_bindings` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-78722.rs:4:12
   |
LL | #![feature(impl_trait_in_bindings)]
   |            ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information

error[E0271]: type mismatch resolving `<impl Future as Future>::Output == u8`
  --> $DIR/issue-78722.rs:7:10
   |
LL | type F = impl core::future::Future<Output = u8>;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `u8`

error: `async` blocks are not allowed in constants
  --> $DIR/issue-78722.rs:15:20
   |
LL |         let f: F = async { 1 };
   |                    ^^^^^^^^^^^

error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/issue-78722.rs:15:13
   |
LL |         let f: F = async { 1 };
   |             ^ constants cannot evaluate destructors
...
LL |     }],
   |     - value is dropped here

error: aborting due to 3 previous errors; 1 warning emitted

Some errors have detailed explanations: E0271, E0493.
For more information about an error, try `rustc --explain E0271`.
